Crop recommendation dataset added

--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7bcd1aa7",
+   "id": "5136bc2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6bf29009",
+   "metadata": {},
+   "source": [
+    "### Problem Statement:\n",
+    "\n",
+    "Predicting the optimal crop that could be grown in a particular location based on the\n",
+    "soil composition, rainfall, temperature and return of investment is essential for any\n",
+    "farmer of the modern world. This could not only save farmers from spending extra\n",
+    "money on fertilizers but also avoid the dangerous practice of growing the same crops\n",
+    "on the same patch of land repeatedly, which depletes the solid from its natural\n",
+    "resources.\n",
+    "\n",
+    "#### given dataset links:\n",
+    "\n",
+    "1) https://www.kaggle.com/datasets/thammuio/all-agriculture-related-datasets-for-india\n",
+    "\n",
+    "2) https://www.kaggle.com/datasets/vanvalkenberg/historicalweatherdataforindiancities\n",
+    "\n",
+    "3) https://www.kaggle.com/datasets/atharvaingle/crop-recommendation-dataset\n",
+    "\n",
+    "4) https://www.kaggle.com/datasets/vanvalkenberg/historicalweatherdataforindiancities\n",
+    "\n",
+    "5) https://www.kaggle.com/datasets/rajanand/rainfall-in-india\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd651ac7",
+   "id": "d669f0ba",
    "metadata": {},
    "outputs": [],
    "source": []
