--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "07dce718",
+   "id": "e7f23f17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2344d4d8",
+   "id": "3e261415",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7682697a",
+   "id": "1979f652",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1b0ab4f6",
+   "id": "45bcef2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,213 +214,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "3ad9cb04",
+   "execution_count": 28,
+   "id": "eeb62fe1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "y should be a 1d array, got an array of shape (2200, 8) instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10388/411830004.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLabelEncoder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_label.py\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, y)\u001b[0m\n\u001b[0;32m    113\u001b[0m             \u001b[0mEncoded\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    114\u001b[0m         \"\"\"\n\u001b[1;32m--> 115\u001b[1;33m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcolumn_or_1d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwarn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    116\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_inverse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    117\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcolumn_or_1d\u001b[1;34m(y, warn)\u001b[0m\n\u001b[0;32m   1036\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1037\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1038\u001b[1;33m     raise ValueError(\n\u001b[0m\u001b[0;32m   1039\u001b[0m         \u001b[1;34m\"y should be a 1d array, got an array of shape {} instead.\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1040\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: y should be a 1d array, got an array of shape (2200, 8) instead."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "le=LabelEncoder()\n",
-    "X=df1.drop(inplace=False,columns)\n",
-    "le.fit_transform(df1)\n"
+    "X=df1.drop(inplace=False,columns=['label'])\n",
+    "y=df1['label']\n",
+    "y=le.fit_transform(y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "390c33c1",
+   "execution_count": 29,
+   "id": "ac14f064",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 20, 20, ...,  5,  5,  5])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "219dfabf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "from interpret.glassbox import ExplainableBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "38b1934d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "33f340df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb=XGBClassifier()\n",
+    "ebm=ExplainableBoostingClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "afcca67f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sutha\\anaconda3\\lib\\site-packages\\xgboost\\sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n",
+      "C:\\Users\\sutha\\anaconda3\\lib\\site-packages\\xgboost\\data.py:262: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class LabelEncoder in module sklearn.preprocessing._label:\n",
-      "\n",
-      "class LabelEncoder(sklearn.base.TransformerMixin, sklearn.base.BaseEstimator)\n",
-      " |  Encode target labels with value between 0 and n_classes-1.\n",
-      " |  \n",
-      " |  This transformer should be used to encode target values, *i.e.* `y`, and\n",
-      " |  not the input `X`.\n",
-      " |  \n",
-      " |  Read more in the :ref:`User Guide <preprocessing_targets>`.\n",
-      " |  \n",
-      " |  .. versionadded:: 0.12\n",
-      " |  \n",
-      " |  Attributes\n",
-      " |  ----------\n",
-      " |  classes_ : ndarray of shape (n_classes,)\n",
-      " |      Holds the label for each class.\n",
-      " |  \n",
-      " |  See Also\n",
-      " |  --------\n",
-      " |  OrdinalEncoder : Encode categorical features using an ordinal encoding\n",
-      " |      scheme.\n",
-      " |  OneHotEncoder : Encode categorical features as a one-hot numeric array.\n",
-      " |  \n",
-      " |  Examples\n",
-      " |  --------\n",
-      " |  `LabelEncoder` can be used to normalize labels.\n",
-      " |  \n",
-      " |  >>> from sklearn import preprocessing\n",
-      " |  >>> le = preprocessing.LabelEncoder()\n",
-      " |  >>> le.fit([1, 2, 2, 6])\n",
-      " |  LabelEncoder()\n",
-      " |  >>> le.classes_\n",
-      " |  array([1, 2, 6])\n",
-      " |  >>> le.transform([1, 1, 2, 6])\n",
-      " |  array([0, 0, 1, 2]...)\n",
-      " |  >>> le.inverse_transform([0, 0, 1, 2])\n",
-      " |  array([1, 1, 2, 6])\n",
-      " |  \n",
-      " |  It can also be used to transform non-numerical labels (as long as they are\n",
-      " |  hashable and comparable) to numerical labels.\n",
-      " |  \n",
-      " |  >>> le = preprocessing.LabelEncoder()\n",
-      " |  >>> le.fit([\"paris\", \"paris\", \"tokyo\", \"amsterdam\"])\n",
-      " |  LabelEncoder()\n",
-      " |  >>> list(le.classes_)\n",
-      " |  ['amsterdam', 'paris', 'tokyo']\n",
-      " |  >>> le.transform([\"tokyo\", \"tokyo\", \"paris\"])\n",
-      " |  array([2, 2, 1]...)\n",
-      " |  >>> list(le.inverse_transform([2, 2, 1]))\n",
-      " |  ['tokyo', 'tokyo', 'paris']\n",
-      " |  \n",
-      " |  Method resolution order:\n",
-      " |      LabelEncoder\n",
-      " |      sklearn.base.TransformerMixin\n",
-      " |      sklearn.base.BaseEstimator\n",
-      " |      builtins.object\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  fit(self, y)\n",
-      " |      Fit label encoder.\n",
-      " |      \n",
-      " |      Parameters\n",
-      " |      ----------\n",
-      " |      y : array-like of shape (n_samples,)\n",
-      " |          Target values.\n",
-      " |      \n",
-      " |      Returns\n",
-      " |      -------\n",
-      " |      self : returns an instance of self.\n",
-      " |          Fitted label encoder.\n",
-      " |  \n",
-      " |  fit_transform(self, y)\n",
-      " |      Fit label encoder and return encoded labels.\n",
-      " |      \n",
-      " |      Parameters\n",
-      " |      ----------\n",
-      " |      y : array-like of shape (n_samples,)\n",
-      " |          Target values.\n",
-      " |      \n",
-      " |      Returns\n",
-      " |      -------\n",
-      " |      y : array-like of shape (n_samples,)\n",
-      " |          Encoded labels.\n",
-      " |  \n",
-      " |  inverse_transform(self, y)\n",
-      " |      Transform labels back to original encoding.\n",
-      " |      \n",
-      " |      Parameters\n",
-      " |      ----------\n",
-      " |      y : ndarray of shape (n_samples,)\n",
-      " |          Target values.\n",
-      " |      \n",
-      " |      Returns\n",
-      " |      -------\n",
-      " |      y : ndarray of shape (n_samples,)\n",
-      " |          Original encoding.\n",
-      " |  \n",
-      " |  transform(self, y)\n",
-      " |      Transform labels to normalized encoding.\n",
-      " |      \n",
-      " |      Parameters\n",
-      " |      ----------\n",
-      " |      y : array-like of shape (n_samples,)\n",
-      " |          Target values.\n",
-      " |      \n",
-      " |      Returns\n",
-      " |      -------\n",
-      " |      y : array-like of shape (n_samples,)\n",
-      " |          Labels as normalized encodings.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors inherited from sklearn.base.TransformerMixin:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from sklearn.base.BaseEstimator:\n",
-      " |  \n",
-      " |  __getstate__(self)\n",
-      " |  \n",
-      " |  __repr__(self, N_CHAR_MAX=700)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  __setstate__(self, state)\n",
-      " |  \n",
-      " |  get_params(self, deep=True)\n",
-      " |      Get parameters for this estimator.\n",
-      " |      \n",
-      " |      Parameters\n",
-      " |      ----------\n",
-      " |      deep : bool, default=True\n",
-      " |          If True, will return the parameters for this estimator and\n",
-      " |          contained subobjects that are estimators.\n",
-      " |      \n",
-      " |      Returns\n",
-      " |      -------\n",
-      " |      params : dict\n",
-      " |          Parameter names mapped to their values.\n",
-      " |  \n",
-      " |  set_params(self, **params)\n",
-      " |      Set the parameters of this estimator.\n",
-      " |      \n",
-      " |      The method works on simple estimators as well as on nested objects\n",
-      " |      (such as :class:`~sklearn.pipeline.Pipeline`). The latter have\n",
-      " |      parameters of the form ``<component>__<parameter>`` so that it's\n",
-      " |      possible to update each component of a nested object.\n",
-      " |      \n",
-      " |      Parameters\n",
-      " |      ----------\n",
-      " |      **params : dict\n",
-      " |          Estimator parameters.\n",
-      " |      \n",
-      " |      Returns\n",
-      " |      -------\n",
-      " |      self : estimator instance\n",
-      " |          Estimator instance.\n",
-      "\n"
+      "[23:21:29] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.5.1/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sutha\\anaconda3\\lib\\site-packages\\interpret\\glassbox\\ebm\\ebm.py:568: UserWarning: Detected multiclass problem. Forcing interactions to 0. Multiclass interactions work except for global visualizations, so the line below setting interactions to zero can be disabled if you know what you are doing.\n",
+      "  warn(\"Detected multiclass problem. Forcing interactions to 0. Multiclass interactions work except for global visualizations, so the line below setting interactions to zero can be disabled if you know what you are doing.\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ExplainableBoostingClassifier()"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb.fit(X_train,y_train)\n",
+    "ebm.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "95d4281a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sutha\\anaconda3\\lib\\site-packages\\xgboost\\data.py:262: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
      ]
     }
    ],
    "source": [
-    "help(LabelEncoder)"
+    "y_pred=xgb.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "654b054d",
+   "id": "6211535f",
    "metadata": {},
    "outputs": [],
    "source": []
