Evaluated accuracy scored and compared the performance of RFR additionally

--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "5136bc2f",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sklearn\n",
+    "import seaborn as sns\n",
     "import torch"
    ]
   },
@@ -55,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e7f23f17",
+   "id": "d1a8cb69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3e261415",
+   "id": "c25ffb88",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1979f652",
+   "id": "001f32e2",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "45bcef2f",
+   "id": "36764e42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "eeb62fe1",
+   "id": "79375013",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,8 +228,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "dea0d4d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "N              0\n",
+       "P              0\n",
+       "K              0\n",
+       "temperature    0\n",
+       "humidity       0\n",
+       "ph             0\n",
+       "rainfall       0\n",
+       "label          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
-   "id": "ac14f064",
+   "id": "6db2c4cf",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "219dfabf",
+   "id": "d4477a99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "38b1934d",
+   "id": "05b2b17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "33f340df",
+   "id": "5aff52d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "afcca67f",
+   "id": "f519160d",
    "metadata": {},
    "outputs": [
     {
@@ -327,10 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "95d4281a",
+   "execution_count": 49,
+   "id": "8d390993",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost prediction accuracy: 0.990909090909091\n",
+      "Explainable Boosting Regressor prediction accuracy: 0.9886363636363636\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -341,16 +379,35 @@
     }
    ],
    "source": [
-    "y_pred=xgb.predict(X_test)"
+    "y_pred=xgb.predict(X_test)\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "\n",
+    "print(f\"XGBoost prediction accuracy: {accuracy_score(y_pred,y_test)}\")\n",
+    "y_pred=ebm.predict(X_test)\n",
+    "print(f\"Explainable Boosting Regressor prediction accuracy: {accuracy_score(y_pred,y_test)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6211535f",
+   "id": "73c25ecf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d697c806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb=XGBClassifier()\n",
+    "y_pred=ebm.predict(X_test)\n",
+    "print(f\"Explainable Boosting Regressor prediction accuracy: {accuracy_score(y_pred,y_test)}\")"
+   ]
   }
  ],
  "metadata": {
