--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -37,9 +37,7 @@
     "\n",
     "3) https://www.kaggle.com/datasets/atharvaingle/crop-recommendation-dataset\n",
     "\n",
-    "4) https://www.kaggle.com/datasets/vanvalkenberg/historicalweatherdataforindiancities\n",
-    "\n",
-    "5) https://www.kaggle.com/datasets/rajanand/rainfall-in-india\n",
+    "4) https://www.kaggle.com/datasets/rajanand/rainfall-in-india\n",
     "\n"
    ]
   },
@@ -55,18 +53,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d1a8cb69",
+   "execution_count": 76,
+   "id": "e996c5a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple',\n",
+       " 'banana',\n",
+       " 'blackgram',\n",
+       " 'chickpea',\n",
+       " 'coconut',\n",
+       " 'coffee',\n",
+       " 'cotton',\n",
+       " 'grapes',\n",
+       " 'jute',\n",
+       " 'kidneybeans',\n",
+       " 'lentil',\n",
+       " 'maize',\n",
+       " 'mango',\n",
+       " 'mothbeans',\n",
+       " 'mungbean',\n",
+       " 'muskmelon',\n",
+       " 'orange',\n",
+       " 'papaya',\n",
+       " 'pigeonpeas',\n",
+       " 'pomegranate',\n",
+       " 'rice',\n",
+       " 'watermelon'}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "set(df1.label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c25ffb88",
+   "execution_count": 75,
+   "id": "a2e19906",
    "metadata": {},
    "outputs": [
     {
@@ -102,86 +133,86 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>90</td>\n",
-       "      <td>42</td>\n",
-       "      <td>43</td>\n",
-       "      <td>20.879744</td>\n",
-       "      <td>82.002744</td>\n",
-       "      <td>6.502985</td>\n",
-       "      <td>202.935536</td>\n",
-       "      <td>rice</td>\n",
+       "      <th>1500</th>\n",
+       "      <td>24</td>\n",
+       "      <td>128</td>\n",
+       "      <td>196</td>\n",
+       "      <td>22.750888</td>\n",
+       "      <td>90.694892</td>\n",
+       "      <td>5.521467</td>\n",
+       "      <td>110.431786</td>\n",
+       "      <td>apple</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>85</td>\n",
-       "      <td>58</td>\n",
-       "      <td>41</td>\n",
-       "      <td>21.770462</td>\n",
-       "      <td>80.319644</td>\n",
-       "      <td>7.038096</td>\n",
-       "      <td>226.655537</td>\n",
-       "      <td>rice</td>\n",
+       "      <th>1501</th>\n",
+       "      <td>7</td>\n",
+       "      <td>144</td>\n",
+       "      <td>197</td>\n",
+       "      <td>23.849401</td>\n",
+       "      <td>94.348150</td>\n",
+       "      <td>6.133221</td>\n",
+       "      <td>114.051249</td>\n",
+       "      <td>apple</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>60</td>\n",
-       "      <td>55</td>\n",
-       "      <td>44</td>\n",
-       "      <td>23.004459</td>\n",
-       "      <td>82.320763</td>\n",
-       "      <td>7.840207</td>\n",
-       "      <td>263.964248</td>\n",
-       "      <td>rice</td>\n",
+       "      <th>1502</th>\n",
+       "      <td>14</td>\n",
+       "      <td>128</td>\n",
+       "      <td>205</td>\n",
+       "      <td>22.608010</td>\n",
+       "      <td>94.589006</td>\n",
+       "      <td>6.226290</td>\n",
+       "      <td>116.039659</td>\n",
+       "      <td>apple</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>74</td>\n",
-       "      <td>35</td>\n",
-       "      <td>40</td>\n",
-       "      <td>26.491096</td>\n",
-       "      <td>80.158363</td>\n",
-       "      <td>6.980401</td>\n",
-       "      <td>242.864034</td>\n",
-       "      <td>rice</td>\n",
+       "      <th>1503</th>\n",
+       "      <td>8</td>\n",
+       "      <td>120</td>\n",
+       "      <td>201</td>\n",
+       "      <td>21.186674</td>\n",
+       "      <td>91.134357</td>\n",
+       "      <td>6.321152</td>\n",
+       "      <td>122.233323</td>\n",
+       "      <td>apple</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>78</td>\n",
-       "      <td>42</td>\n",
-       "      <td>42</td>\n",
-       "      <td>20.130175</td>\n",
-       "      <td>81.604873</td>\n",
-       "      <td>7.628473</td>\n",
-       "      <td>262.717340</td>\n",
-       "      <td>rice</td>\n",
+       "      <th>1504</th>\n",
+       "      <td>20</td>\n",
+       "      <td>129</td>\n",
+       "      <td>201</td>\n",
+       "      <td>23.410447</td>\n",
+       "      <td>91.699133</td>\n",
+       "      <td>5.587906</td>\n",
+       "      <td>116.077793</td>\n",
+       "      <td>apple</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    N   P   K  temperature   humidity        ph    rainfall label\n",
-       "0  90  42  43    20.879744  82.002744  6.502985  202.935536  rice\n",
-       "1  85  58  41    21.770462  80.319644  7.038096  226.655537  rice\n",
-       "2  60  55  44    23.004459  82.320763  7.840207  263.964248  rice\n",
-       "3  74  35  40    26.491096  80.158363  6.980401  242.864034  rice\n",
-       "4  78  42  42    20.130175  81.604873  7.628473  262.717340  rice"
+       "       N    P    K  temperature   humidity        ph    rainfall  label\n",
+       "1500  24  128  196    22.750888  90.694892  5.521467  110.431786  apple\n",
+       "1501   7  144  197    23.849401  94.348150  6.133221  114.051249  apple\n",
+       "1502  14  128  205    22.608010  94.589006  6.226290  116.039659  apple\n",
+       "1503   8  120  201    21.186674  91.134357  6.321152  122.233323  apple\n",
+       "1504  20  129  201    23.410447  91.699133  5.587906  116.077793  apple"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.head()"
+    "df1[df1.label=='apple'].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "001f32e2",
+   "execution_count": 61,
+   "id": "b1e41940",
    "metadata": {},
    "outputs": [
     {
@@ -200,13 +231,14 @@
    "source": [
     "plt.figure(figsize=(25,9))\n",
     "plt.bar(list(set(df1.label)),[list(df1['label']).count(i) for i in set(df1.label)])\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# ALL CLASSES ARE PRESENT IN COMMON"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "36764e42",
+   "id": "819d29a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "79375013",
+   "id": "5c9f0940",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "dea0d4d8",
+   "id": "a52a3160",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6db2c4cf",
+   "id": "edf04475",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d4477a99",
+   "id": "8037100b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "05b2b17a",
+   "id": "04481abe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5aff52d3",
+   "id": "f815a001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f519160d",
+   "id": "f694247e",
    "metadata": {},
    "outputs": [
     {
@@ -357,16 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "8d390993",
+   "execution_count": 60,
+   "id": "76b5d191",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost prediction accuracy: 0.990909090909091\n",
-      "Explainable Boosting Regressor prediction accuracy: 0.9886363636363636\n"
+      "XGBoost Classifier prediction accuracy: 0.990909090909091\n",
+      "Explainable Boosting Classifier prediction accuracy: 0.9886363636363636\n"
      ]
     },
     {
@@ -382,15 +414,15 @@
     "y_pred=xgb.predict(X_test)\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "\n",
-    "print(f\"XGBoost prediction accuracy: {accuracy_score(y_pred,y_test)}\")\n",
+    "print(f\"XGBoost Classifier prediction accuracy: {accuracy_score(y_pred,y_test)}\")\n",
     "y_pred=ebm.predict(X_test)\n",
-    "print(f\"Explainable Boosting Regressor prediction accuracy: {accuracy_score(y_pred,y_test)}\")"
+    "print(f\"Explainable Boosting Classifier prediction accuracy: {accuracy_score(y_pred,y_test)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "73c25ecf",
+   "execution_count": 56,
+   "id": "a1a4e554",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,15 +431,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d697c806",
+   "execution_count": 59,
+   "id": "d98b51f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Classifier prediction accuracy: 0.9931818181818182\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfc=RandomForestClassifier()\n",
+    "rfc.fit(X_train,y_train)\n",
+    "y_pred=rfc.predict(X_test)\n",
+    "print(f\"Random Forest Classifier prediction accuracy: {accuracy_score(y_pred,y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5132faa5",
+   "metadata": {},
+   "source": [
+    "# Agricultural dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "203a6b12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb=XGBClassifier()\n",
-    "y_pred=ebm.predict(X_test)\n",
-    "print(f\"Explainable Boosting Regressor prediction accuracy: {accuracy_score(y_pred,y_test)}\")"
+    "df2=pd.read_csv(\"Indian_agriculture.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "a79f7f15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>district</th>\n",
+       "      <th>market</th>\n",
+       "      <th>commodity</th>\n",
+       "      <th>variety</th>\n",
+       "      <th>arrival_date</th>\n",
+       "      <th>min_price</th>\n",
+       "      <th>max_price</th>\n",
+       "      <th>modal_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Andaman and Nicobar</td>\n",
+       "      <td>South Andaman</td>\n",
+       "      <td>Port Blair</td>\n",
+       "      <td>Amaranthus</td>\n",
+       "      <td>Amaranthus</td>\n",
+       "      <td>04/03/2019</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Andaman and Nicobar</td>\n",
+       "      <td>South Andaman</td>\n",
+       "      <td>Port Blair</td>\n",
+       "      <td>Banana - Green</td>\n",
+       "      <td>Banana - Green</td>\n",
+       "      <td>04/03/2019</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Andaman and Nicobar</td>\n",
+       "      <td>South Andaman</td>\n",
+       "      <td>Port Blair</td>\n",
+       "      <td>Bhindi(Ladies Finger)</td>\n",
+       "      <td>Bhindi</td>\n",
+       "      <td>04/03/2019</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andaman and Nicobar</td>\n",
+       "      <td>South Andaman</td>\n",
+       "      <td>Port Blair</td>\n",
+       "      <td>Bitter gourd</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>04/03/2019</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andaman and Nicobar</td>\n",
+       "      <td>South Andaman</td>\n",
+       "      <td>Port Blair</td>\n",
+       "      <td>Black pepper</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>04/03/2019</td>\n",
+       "      <td>110000</td>\n",
+       "      <td>130000</td>\n",
+       "      <td>120000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 state       district      market              commodity  \\\n",
+       "0  Andaman and Nicobar  South Andaman  Port Blair             Amaranthus   \n",
+       "1  Andaman and Nicobar  South Andaman  Port Blair         Banana - Green   \n",
+       "2  Andaman and Nicobar  South Andaman  Port Blair  Bhindi(Ladies Finger)   \n",
+       "3  Andaman and Nicobar  South Andaman  Port Blair           Bitter gourd   \n",
+       "4  Andaman and Nicobar  South Andaman  Port Blair           Black pepper   \n",
+       "\n",
+       "          variety arrival_date  min_price  max_price  modal_price  \n",
+       "0      Amaranthus   04/03/2019       6000       8000         7000  \n",
+       "1  Banana - Green   04/03/2019       4500       5500         5000  \n",
+       "2          Bhindi   04/03/2019       6000       8000         7000  \n",
+       "3           Other   04/03/2019       6000       8000         7000  \n",
+       "4           Other   04/03/2019     110000     130000       120000  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd206587",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "f4497237",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orange\n",
+      "Apple\n",
+      "Coconut\n",
+      "Papaya\n"
+     ]
+    }
+   ],
+   "source": [
+    "## looking at crops that are common in df2 and df1\n",
+    "for i in set(df2.variety):\n",
+    "    if i.lower() in set(df1.label):\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08a209e2",
+   "metadata": {},
+   "source": [
+    "# Common types of soil in India\n",
+    "\n",
+    "** according to https://currentaffairs.adda247.com/major-soil-types-of-india-map/ **\n",
+    "1. Alluvial soil - maize, rice, pulses\n",
+    "2. Black soil - cotton\n",
+    "3. Peaty Soil - \n",
+    "4. Saline and alkaline soil - infertile\n",
+    "5. Red soil\n",
+    "6. Desert soil\n",
+    "7. Laterite soil -coconut, coffee, cashew nuts, and rice\n",
+    "8. Mountain soil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "1f92ac18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f3d186d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
