--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "e996c5a7",
+   "id": "c04cdba1",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a2e19906",
+   "id": "5b0a0def",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b1e41940",
+   "id": "9098c339",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "819d29a9",
+   "id": "49a694ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5c9f0940",
+   "id": "b9f7bb1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a52a3160",
+   "id": "80f0a124",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "edf04475",
+   "id": "ec3e2235",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8037100b",
+   "id": "1395d1f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "04481abe",
+   "id": "6e38b08b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f815a001",
+   "id": "9fc4e0c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f694247e",
+   "id": "67c16677",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "76b5d191",
+   "id": "087f66c2",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "a1a4e554",
+   "id": "0e2fef3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d98b51f8",
+   "id": "5f2300e2",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5132faa5",
+   "id": "44d7c0f4",
    "metadata": {},
    "source": [
     "# Agricultural dataset "
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "203a6b12",
+   "id": "7e5fef05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a79f7f15",
+   "id": "39872515",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd206587",
+   "id": "a2148e97",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f4497237",
+   "id": "f9a8ed40",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08a209e2",
+   "id": "f651a9a4",
    "metadata": {},
    "source": [
     "# Common types of soil in India\n",
@@ -648,19 +648,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "1f92ac18",
+   "execution_count": 79,
+   "id": "f827b453",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SpearmanrResult(correlation=0.011411146247036836, pvalue=0.5926889755760951)\n",
+      "SpearmanrResult(correlation=-0.032456774096165084, pvalue=0.12803579560964418)\n",
+      "SpearmanrResult(correlation=0.06990320344875078, pvalue=0.0010347593510654286)\n",
+      "SpearmanrResult(correlation=-0.1512802682960735, pvalue=9.8399168859438e-13)\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import spearmanr\n",
-    "\n"
+    "print(spearmanr(df1.rainfall,df1.N))\n",
+    "print(spearmanr(df1.rainfall,df1.P))\n",
+    "print(spearmanr(df1.rainfall,df1.K))\n",
+    "print(spearmanr(df1.rainfall,df1.ph))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "649270aa",
+   "metadata": {},
+   "source": [
+    "## Weather prediction\n",
+    "\n",
+    "dataset used: https://www.kaggle.com/datasets/saisaran2/rainfall-data-from-1901-to-2017-for-india"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f3d186d",
+   "id": "a17c22c8",
    "metadata": {},
    "outputs": [],
    "source": []
