Weather prediction model

--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "c04cdba1",
+   "id": "b2c7b96d",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5b0a0def",
+   "id": "03df7857",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9098c339",
+   "id": "072e12e4",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "49a694ed",
+   "id": "3772276e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b9f7bb1b",
+   "id": "0c8bfb2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "80f0a124",
+   "id": "5e70225c",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ec3e2235",
+   "id": "6b8f7723",
    "metadata": {},
    "outputs": [
     {
@@ -310,19 +310,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "1395d1f9",
+   "execution_count": 107,
+   "id": "40b3b3a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xgboost import XGBClassifier\n",
-    "from interpret.glassbox import ExplainableBoostingClassifier"
+    "from xgboost import XGBClassifier,XGBRegressor\n",
+    "from interpret.glassbox import ExplainableBoostingClassifier,ExplainableBoostingRegressor"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6e38b08b",
+   "id": "40f89360",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9fc4e0c3",
+   "id": "22ee3780",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "67c16677",
+   "id": "9f5f034c",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "087f66c2",
+   "id": "2bbcb723",
    "metadata": {},
    "outputs": [
     {
@@ -421,18 +421,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "0e2fef3e",
+   "execution_count": 98,
+   "id": "919916c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier,RandomForestRegressor"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5f2300e2",
+   "id": "195a9bf1",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d7c0f4",
+   "id": "cc84841d",
    "metadata": {},
    "source": [
     "# Agricultural dataset "
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7e5fef05",
+   "id": "915f11b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "39872515",
+   "id": "c9ba3c23",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2148e97",
+   "id": "b5a59282",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f9a8ed40",
+   "id": "ebbbb420",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f651a9a4",
+   "id": "194d2679",
    "metadata": {},
    "source": [
     "# Common types of soil in India\n",
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f827b453",
+   "id": "6dfab4ea",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "649270aa",
+   "id": "cbc4ac8b",
    "metadata": {},
    "source": [
     "## Weather prediction\n",
@@ -683,8 +683,481 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "id": "43337d15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3=pd.read_csv(\"Rainfall_Data_LL.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "62d40988",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SUBDIVISION</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>JAN</th>\n",
+       "      <th>FEB</th>\n",
+       "      <th>MAR</th>\n",
+       "      <th>APR</th>\n",
+       "      <th>MAY</th>\n",
+       "      <th>JUN</th>\n",
+       "      <th>JUL</th>\n",
+       "      <th>AUG</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OCT</th>\n",
+       "      <th>NOV</th>\n",
+       "      <th>DEC</th>\n",
+       "      <th>ANNUAL</th>\n",
+       "      <th>Jan-Feb</th>\n",
+       "      <th>Mar-May</th>\n",
+       "      <th>June-September</th>\n",
+       "      <th>Oct-Dec</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1901</td>\n",
+       "      <td>49.2</td>\n",
+       "      <td>87.1</td>\n",
+       "      <td>29.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>528.8</td>\n",
+       "      <td>517.5</td>\n",
+       "      <td>365.1</td>\n",
+       "      <td>481.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>388.5</td>\n",
+       "      <td>558.2</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>3373.2</td>\n",
+       "      <td>136.3</td>\n",
+       "      <td>560.3</td>\n",
+       "      <td>1696.3</td>\n",
+       "      <td>980.3</td>\n",
+       "      <td>12.61124</td>\n",
+       "      <td>92.83165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>159.8</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>446.1</td>\n",
+       "      <td>537.1</td>\n",
+       "      <td>228.9</td>\n",
+       "      <td>753.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>197.2</td>\n",
+       "      <td>359.0</td>\n",
+       "      <td>160.5</td>\n",
+       "      <td>3520.7</td>\n",
+       "      <td>159.8</td>\n",
+       "      <td>458.3</td>\n",
+       "      <td>2185.9</td>\n",
+       "      <td>716.7</td>\n",
+       "      <td>12.61124</td>\n",
+       "      <td>92.83165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1903</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>235.1</td>\n",
+       "      <td>479.9</td>\n",
+       "      <td>728.4</td>\n",
+       "      <td>326.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>181.2</td>\n",
+       "      <td>284.4</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>2957.4</td>\n",
+       "      <td>156.7</td>\n",
+       "      <td>236.1</td>\n",
+       "      <td>1874.0</td>\n",
+       "      <td>690.6</td>\n",
+       "      <td>12.61124</td>\n",
+       "      <td>92.83165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>202.4</td>\n",
+       "      <td>304.5</td>\n",
+       "      <td>495.1</td>\n",
+       "      <td>502.0</td>\n",
+       "      <td>160.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>222.2</td>\n",
+       "      <td>308.7</td>\n",
+       "      <td>40.1</td>\n",
+       "      <td>3079.6</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>506.9</td>\n",
+       "      <td>1977.6</td>\n",
+       "      <td>571.0</td>\n",
+       "      <td>12.61124</td>\n",
+       "      <td>92.83165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1905</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>279.5</td>\n",
+       "      <td>628.7</td>\n",
+       "      <td>368.7</td>\n",
+       "      <td>330.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>260.7</td>\n",
+       "      <td>25.4</td>\n",
+       "      <td>344.7</td>\n",
+       "      <td>2566.7</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>309.7</td>\n",
+       "      <td>1624.9</td>\n",
+       "      <td>630.8</td>\n",
+       "      <td>12.61124</td>\n",
+       "      <td>92.83165</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 SUBDIVISION  YEAR   JAN    FEB   MAR    APR    MAY    JUN  \\\n",
+       "0  Andaman & Nicobar Islands  1901  49.2   87.1  29.2    2.3  528.8  517.5   \n",
+       "1  Andaman & Nicobar Islands  1902   0.0  159.8  12.2    0.0  446.1  537.1   \n",
+       "2  Andaman & Nicobar Islands  1903  12.7  144.0   0.0    1.0  235.1  479.9   \n",
+       "3  Andaman & Nicobar Islands  1904   9.4   14.7   0.0  202.4  304.5  495.1   \n",
+       "4  Andaman & Nicobar Islands  1905   1.3    0.0   3.3   26.9  279.5  628.7   \n",
+       "\n",
+       "     JUL    AUG  ...    OCT    NOV    DEC  ANNUAL  Jan-Feb  Mar-May  \\\n",
+       "0  365.1  481.1  ...  388.5  558.2   33.6  3373.2    136.3    560.3   \n",
+       "1  228.9  753.7  ...  197.2  359.0  160.5  3520.7    159.8    458.3   \n",
+       "2  728.4  326.7  ...  181.2  284.4  225.0  2957.4    156.7    236.1   \n",
+       "3  502.0  160.1  ...  222.2  308.7   40.1  3079.6     24.1    506.9   \n",
+       "4  368.7  330.5  ...  260.7   25.4  344.7  2566.7      1.3    309.7   \n",
+       "\n",
+       "   June-September  Oct-Dec  Latitude  Longitude  \n",
+       "0          1696.3    980.3  12.61124   92.83165  \n",
+       "1          2185.9    716.7  12.61124   92.83165  \n",
+       "2          1874.0    690.6  12.61124   92.83165  \n",
+       "3          1977.6    571.0  12.61124   92.83165  \n",
+       "4          1624.9    630.8  12.61124   92.83165  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.drop(columns=[\"Name\"],inplace=True)\n",
+    "df3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "f8389654",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SUBDIVISION</th>\n",
+       "      <th>YEAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>1905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4182</th>\n",
+       "      <td>Lakshadweep</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4183</th>\n",
+       "      <td>Lakshadweep</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4184</th>\n",
+       "      <td>Lakshadweep</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4185</th>\n",
+       "      <td>Lakshadweep</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4186</th>\n",
+       "      <td>Lakshadweep</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4187 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    SUBDIVISION  YEAR\n",
+       "0     Andaman & Nicobar Islands  1901\n",
+       "1     Andaman & Nicobar Islands  1902\n",
+       "2     Andaman & Nicobar Islands  1903\n",
+       "3     Andaman & Nicobar Islands  1904\n",
+       "4     Andaman & Nicobar Islands  1905\n",
+       "...                         ...   ...\n",
+       "4182                Lakshadweep  2012\n",
+       "4183                Lakshadweep  2013\n",
+       "4184                Lakshadweep  2014\n",
+       "4185                Lakshadweep  2015\n",
+       "4186                Lakshadweep  2016\n",
+       "\n",
+       "[4187 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X=df3.iloc[:,:2]\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "0ed653e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=df3.ANNUAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "d4f6840a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le_state=LabelEncoder()\n",
+    "X['SUBDIVISION']=le_state.fit_transform(X['SUBDIVISION'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "d3464bcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor()"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=42)\n",
+    "rfr=RandomForestRegressor()\n",
+    "rfr.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "6d19e49e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=rfr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "7380e8e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.871313765753805"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "r2_score(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "97daad8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sutha\\anaconda3\\lib\\site-packages\\xgboost\\data.py:262: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8968687929408511"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgbr=XGBRegressor()\n",
+    "xgbr.fit(X_train,y_train)\n",
+    "y_pred=xgbr.predict(X_test)\n",
+    "r2_score(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "c000d41e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8895842897947297"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ebr=ExplainableBoostingRegressor()\n",
+    "ebr.fit(X_train,y_train)\n",
+    "y_pred=ebr.predict(X_test)\n",
+    "r2_score(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a17c22c8",
+   "id": "9f1aa203",
    "metadata": {},
    "outputs": [],
    "source": []
